--- a/app/insurance/base/customer/stateGridCustomer/stateGridCustomerGrid.html
+++ b/app/insurance/base/customer/stateGridCustomer/stateGridCustomerGrid.html
@@ -222,24 +222,24 @@
                 </div>
             </accordion-group>
         </accordion>
-        <tabset justified="false" ng-if="chilbTable">
-            <tab index="1" heading="账户信息" select="selectTab('accountGridOptions')">
-                <div ui-grid="accountGridOptions"  ui-grid-cellnav ui-grid-selection ui-grid-auto-resize
-                     ui-grid-resize-columns class="grid" style="height: 200px"></div>
-            </tab>
-            <tab index="2" heading="联系人" select="selectTab('linkmanGridOptions')">
-                <div ui-grid="linkmanGridOptions"  ui-grid-cellnav ui-grid-selection ui-grid-auto-resize
-                     ui-grid-resize-columns class="grid" style="height: 200px"></div>
-            </tab>
-            <tab index="3" heading="部门信息" select="selectTab('customerDeptGridOptions')">
-                <div ui-grid="customerDeptGridOptions"  ui-grid-cellnav ui-grid-selection
-                     ui-grid-auto-resize ui-grid-resize-columns class="grid" style="height: 200px"></div>
-            </tab>
-            <tab index="4" heading="注册号/统一社会信用代码证附件" select="selectTab('dealAttachmentBGridOptions')">
-                <div ui-grid="dealAttachmentBGridOptions"  ui-grid-cellnav ui-grid-selection
-                     ui-grid-auto-resize ui-grid-resize-columns class="grid" style="height: 200px"></div>
-            </tab>
-        </tabset>
+<!--        <tabset justified="false" ng-if="chilbTable">-->
+<!--            <tab index="1" heading="账户信息" select="selectTab('accountGridOptions')">-->
+<!--                <div ui-grid="accountGridOptions"  ui-grid-cellnav ui-grid-selection ui-grid-auto-resize-->
+<!--                     ui-grid-resize-columns class="grid" style="height: 200px"></div>-->
+<!--            </tab>-->
+<!--            <tab index="2" heading="联系人" select="selectTab('linkmanGridOptions')">-->
+<!--                <div ui-grid="linkmanGridOptions"  ui-grid-cellnav ui-grid-selection ui-grid-auto-resize-->
+<!--                     ui-grid-resize-columns class="grid" style="height: 200px"></div>-->
+<!--            </tab>-->
+<!--            <tab index="3" heading="部门信息" select="selectTab('customerDeptGridOptions')">-->
+<!--                <div ui-grid="customerDeptGridOptions"  ui-grid-cellnav ui-grid-selection-->
+<!--                     ui-grid-auto-resize ui-grid-resize-columns class="grid" style="height: 200px"></div>-->
+<!--            </tab>-->
+<!--            <tab index="4" heading="注册号/统一社会信用代码证附件" select="selectTab('dealAttachmentBGridOptions')">-->
+<!--                <div ui-grid="dealAttachmentBGridOptions"  ui-grid-cellnav ui-grid-selection-->
+<!--                     ui-grid-auto-resize ui-grid-resize-columns class="grid" style="height: 200px"></div>-->
+<!--            </tab>-->
+<!--        </tabset>-->
 
     </div>
 </div>
